# fluiq-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
src/fluiq/: __init__.py  ci.py  client.py  config.py  exceptions.py  tracer.py
tests/: _runner.py  keys.py  media_reference_test.py  multiagent_joins_test.py  retry_e2e_probe.py
tests/async_clients/: anthropic_async_stream_test.py  anthropic_async_test.py  gemini_async_test.py  openai_async_responses_test.py  openai_async_streaming_test.py  openai_async_test.py
tests/basic/: anthropic_test1.py  gemini_test1.py  openai_test1.py  test_openai_trace_fail_open.py  test_optimization_trace_tree.py
tests/count_tokens/: anthropic_count_tokens_test.py  gemini_count_tokens_test.py  vertexai_count_tokens_test.py
tests/crewai_test/: crewai_async_test.py  crewai_basic_test.py  crewai_multiagent_join_test.py  crewai_sequential_test.py  crewai_tools_test.py
tests/decorator/: nested_trace_test.py
tests/endpoints/: openai_audio_speech_test.py  openai_audio_transcription_test.py  openai_embeddings_test.py  openai_image_test.py
tests/evals/: anthropic_test1.py  anthropic_test2.py  gemini_test1.py  openai_test1.py  openai_test2.py  openai_test3.py
tests/googleadk/: googleadk_basic_test.py  googleadk_loop_test.py  googleadk_multiagent_join_test.py  googleadk_parallel_test.py  googleadk_realtime_test.py  googleadk_sequential_test.py  googleadk_tools_test.py  test_join_parent_ids.py
tests/langchain/: langchain_chain_test.py  langchain_ollama_test.py  langchain_test.py  langchain_tools_test.py
(+138 files in other folders)
