[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluiq"
version = "0.1.0"
description = "Fluiq SDK"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy>=3.0.0"
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=2.2",
]
all = [
    "sentence-transformers>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
