[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluiq"
version = "0.1.2"
description = "Fluiq SDK"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "redis>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]

chromadb = ["chromadb>=0.4"]
faiss = ["faiss-cpu>=1.7"]
pinecone = ["pinecone"]
qdrant = ["qdrant-client>=1.7"]
weaviate = ["weaviate-client>=4.0"]
vectorstores = [
    "chromadb>=0.4",
    "faiss-cpu>=1.7",
    "pinecone>=3.0",
    "qdrant-client>=1.7",
    "weaviate-client>=4.0",
]
all = [
    "chromadb>=0.4",
    "faiss-cpu>=1.7",
    "pinecone>=3.0",
    "qdrant-client>=1.7",
    "weaviate-client>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
